--- a/index.html
+++ b/index.html
@@ -4,12 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
+    <link rel="icon" href="./images/pageIcon.png">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:wght@200;400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
+    <main>
+        <div class="display">
+            <h4 id="result-text"></h4>
+        </div>
+        <div class="buttons">
+            <div class="content-row">
+                <button id="clear" class="button top-math-btn">C</button>
+                <button id="revert-signal" class="button top-math-btn"><img src="./images/plus-minus.svg"
+                        alt=""></button>
+                <button value="%" class="button top-math-btn">%</button>
+                <button value="/" class="button math-operation-btn">÷</button>
+            </div>
+            <div class="content-row">
+                <button value="7" class="button numeric-btn">7</button>
+                <button value="8" class="button numeric-btn">8</button>
+                <button value="9" class="button numeric-btn">9</button>
+                <button value="*" class="button math-operation-btn times-btn">x</button>
+            </div>
+            <div class="content-row">
+                <button value="4" class="button numeric-btn">4</button>
+                <button value="5" class="button numeric-btn">5</button>
+                <button value="6" class="button numeric-btn">6</button>
+                <button value="-" class="button math-operation-btn">-</button>
+            </div>
+            <div class="content-row">
+                <button value="1" class="button numeric-btn">1</button>
+                <button value="2" class="button numeric-btn">2</button>
+                <button value="3" class="button numeric-btn">3</button>
+                <button value="+" class="button math-operation-btn">+</button>
+            </div>
+            <div class="last-content-row">
+                <button value="0" id="zero" class="button numeric-btn zero-btn">0</button>
+                <button value="," class="button numeric-btn">,</button>
+                <button id="equals" class="button math-operation-btn">=</button>
+            </div>
+        </div>
+    </main>
     <script src="./javascript/script.js"></script>
 </body>
 
