Projeto reta final

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="last-content-row">
                 <button value="0" id="zero" class="button numeric-btn zero-btn">0</button>
                 <button value="," class="button numeric-btn">,</button>
-                <button id="equals" class="button math-operation-btn">=</button>
+                <button value="equals" class="button math-operation-btn">=</button>
             </div>
         </div>
     </main>
