--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
                 <button id="revert-signal" class="button top-math-btn"><img src="./images/plus-minus.svg"
                         alt=""></button>
                 <button value="%" class="button top-math-btn">%</button>
-                <button value="/" class="button math-operation-btn">÷</button>
+                <button value="/" class="button math-operation-btn math-select">÷</button>
             </div>
             <div class="content-row">
                 <button value="7" class="button numeric-btn">7</button>
                 <button value="8" class="button numeric-btn">8</button>
                 <button value="9" class="button numeric-btn">9</button>
-                <button value="*" class="button math-operation-btn times-btn">x</button>
+                <button value="*" class="button math-operation-btn math-select">x</button>
             </div>
             <div class="content-row">
                 <button value="4" class="button numeric-btn">4</button>
                 <button value="5" class="button numeric-btn">5</button>
                 <button value="6" class="button numeric-btn">6</button>
-                <button value="-" class="button math-operation-btn">-</button>
+                <button value="-" class="button math-operation-btn math-select">-</button>
             </div>
             <div class="content-row">
                 <button value="1" class="button numeric-btn">1</button>
                 <button value="2" class="button numeric-btn">2</button>
                 <button value="3" class="button numeric-btn">3</button>
-                <button value="+" class="button math-operation-btn">+</button>
+                <button value="+" class="button math-operation-btn math-select">+</button>
             </div>
             <div class="last-content-row">
                 <button value="0" id="zero" class="button numeric-btn zero-btn">
