--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="buttons">
             <div class="content-row">
-                <button id="clear" class="button top-math-btn">C</button>
+                <button id="clear" class="button top-math-btn">AC</button>
                 <button id="revert-signal" class="button top-math-btn"><img src="./images/plus-minus.svg"
                         alt=""></button>
                 <button value="%" class="button top-math-btn">%</button>
